1.6/_sources/modules/generated/sklearn.linear_model.LogisticRegressionCV.rst.txt
LogisticRegressionCV
====================

.. currentmodule:: sklearn.linear_model

.. autoclass:: LogisticRegressionCV
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.linear_model.LogisticRegressionCV sklearn.linear_model.LogisticRegressionCV.__init__ sklearn.linear_model.LogisticRegressionCV.decision_function sklearn.linear_model.LogisticRegressionCV.densify sklearn.linear_model.LogisticRegressionCV.fit sklearn.linear_model.LogisticRegressionCV.get_metadata_routing sklearn.linear_model.LogisticRegressionCV.get_params sklearn.linear_model.LogisticRegressionCV.predict sklearn.linear_model.LogisticRegressionCV.predict_log_proba sklearn.linear_model.LogisticRegressionCV.predict_proba sklearn.linear_model.LogisticRegressionCV.score sklearn.linear_model.LogisticRegressionCV.set_fit_request sklearn.linear_model.LogisticRegressionCV.set_params sklearn.linear_model.LogisticRegressionCV.set_score_request sklearn.linear_model.LogisticRegressionCV.sparsify 
   :add-heading: Gallery examples
   :heading-level: -