1.7/_sources/modules/generated/sklearn.linear_model.LogisticRegressionCV.rst.txt
LogisticRegressionCV
====================

.. currentmodule:: sklearn.linear_model

.. autoclass:: LogisticRegressionCV
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.linear_model.LogisticRegressionCV sklearn.linear_model.LogisticRegressionCV.__delattr__ sklearn.linear_model.LogisticRegressionCV.__dir__ sklearn.linear_model.LogisticRegressionCV.__eq__ sklearn.linear_model.LogisticRegressionCV.__format__ sklearn.linear_model.LogisticRegressionCV.__ge__ sklearn.linear_model.LogisticRegressionCV.__getattribute__ sklearn.linear_model.LogisticRegressionCV.__getstate__ sklearn.linear_model.LogisticRegressionCV.__gt__ sklearn.linear_model.LogisticRegressionCV.__hash__ sklearn.linear_model.LogisticRegressionCV.__init__ sklearn.linear_model.LogisticRegressionCV.__init_subclass__ sklearn.linear_model.LogisticRegressionCV.__le__ sklearn.linear_model.LogisticRegressionCV.__lt__ sklearn.linear_model.LogisticRegressionCV.__ne__ sklearn.linear_model.LogisticRegressionCV.__new__ sklearn.linear_model.LogisticRegressionCV.__reduce__ sklearn.linear_model.LogisticRegressionCV.__reduce_ex__ sklearn.linear_model.LogisticRegressionCV.__repr__ sklearn.linear_model.LogisticRegressionCV.__setattr__ sklearn.linear_model.LogisticRegressionCV.__setstate__ sklearn.linear_model.LogisticRegressionCV.__sizeof__ sklearn.linear_model.LogisticRegressionCV.__sklearn_clone__ sklearn.linear_model.LogisticRegressionCV.__sklearn_tags__ sklearn.linear_model.LogisticRegressionCV.__str__ sklearn.linear_model.LogisticRegressionCV.__subclasshook__ sklearn.linear_model.LogisticRegressionCV._build_request_for_signature sklearn.linear_model.LogisticRegressionCV._get_default_requests sklearn.linear_model.LogisticRegressionCV._get_doc_link sklearn.linear_model.LogisticRegressionCV._get_metadata_request sklearn.linear_model.LogisticRegressionCV._get_param_names sklearn.linear_model.LogisticRegressionCV._get_params_html sklearn.linear_model.LogisticRegressionCV._get_scorer sklearn.linear_model.LogisticRegressionCV._html_repr sklearn.linear_model.LogisticRegressionCV._predict_proba_lr sklearn.linear_model.LogisticRegressionCV._repr_html_inner sklearn.linear_model.LogisticRegressionCV._repr_mimebundle_ sklearn.linear_model.LogisticRegressionCV._validate_params sklearn.linear_model.LogisticRegressionCV.decision_function sklearn.linear_model.LogisticRegressionCV.densify sklearn.linear_model.LogisticRegressionCV.fit sklearn.linear_model.LogisticRegressionCV.get_metadata_routing sklearn.linear_model.LogisticRegressionCV.get_params sklearn.linear_model.LogisticRegressionCV.predict sklearn.linear_model.LogisticRegressionCV.predict_log_proba sklearn.linear_model.LogisticRegressionCV.predict_proba sklearn.linear_model.LogisticRegressionCV.score sklearn.linear_model.LogisticRegressionCV.set_fit_request sklearn.linear_model.LogisticRegressionCV.set_params sklearn.linear_model.LogisticRegressionCV.set_score_request sklearn.linear_model.LogisticRegressionCV.sparsify 
   :add-heading: Gallery examples
   :heading-level: -